hphp/hack/test/typecheck/shape_idx1.php.like_types.exp
File "shape_idx1.php", line 19, characters 3-31:
  ?nothing
File "shape_idx1.php", line 20, characters 3-35:
  A
File "shape_idx1.php", line 21, characters 3-32:
  ?nothing
File "shape_idx1.php", line 22, characters 3-37:
  AB
File "shape_idx1.php", line 19, characters 23-24:
Invalid argument (Typing[4110])
File "shape_idx1.php", line 19, characters 23-24:
Expected shape(?'x' => [unresolved], ...) because Shapes::idx expects a shape
File "shape_idx1.php", line 8, characters 10-24:
But got dynamic because it is an unenforceable type
